Fix overflow issue in code block

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -71,6 +71,7 @@ pre {
   background-color: #2a2a2a !important;
   text-shadow: none;
   padding: 10px;
+  overflow: auto;
 }
 
 .mt-100 {
